Fix IE layout for projection radio selector (ie. extra border for radio button, wrong vertical alignement).
git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@8516 ff403467-3f20-0410-99e5-ff581e626a08

--- a/web-client/src/main/resources/apps/css/gnmetadatadefault.css
+++ b/web-client/src/main/resources/apps/css/gnmetadatadefault.css
@@ -165,6 +165,10 @@ label + span {
   padding : 1px 3px;
 }
 
+.metadata * input[type='radio'] {
+  border-width: 0px;
+}
+
 .metadata * select {
   max-width : 200px
 }
